--- a/office/templates/office.base.htm
+++ b/office/templates/office.base.htm
@@ -64,7 +64,7 @@
         <a href="{% url 'discount:dis' %}" class="nav">促销管理</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="{% url 'tasting:apply' %}">试吃</a></li>
+            <li><a href="{% url 'tasting:applys' %}">试吃</a></li>
             <li><a href="{% url 'discount:dis' %}">会员折扣</a></li>
             <li><a href="{% url 'discount:dis' %}">提货券</a></li>
             <li><a href="{% url 'discount:dis' %}">积分换购</a></li>
