--- a/cart/templates/cart.htm
+++ b/cart/templates/cart.htm
@@ -1,103 +1,108 @@
-{% extends "shop.base.htm" %}
+{% extends "shop.base.htm" %} {% block section %}
+<section>
+    <form name="toCart" method="post" action="{% url 'cart:cart' %}" class="fn p0 m0">
+        <table width="100%">
+            <tr>
+                <th>商品名称</th>
+                <th width="20%">规格</th>
+                <th width="10%">价格</th>
+                <th width="53px">数量</th>
+                <th width="10%">小计</th>
+                <th width="84px">&nbsp;</th>
+            </tr>
+            {% if cart.items %} {% for i in cart.items %}
+            <tr align="center">
+                <td><a href="{% url 'tag:tagShow' i.item.name|urlencode %}">{{ i.item.name }}</a>
+                </td>
+                <td>{{ i.spec.spec.value }}</td>
+                <td>
+                    <span id="am{{ i.mark }}">{{ i.nfee|floatformat:2 }}</span>
+                </td>
+                <td>
+                    <input type="text" name="{{ i.mark }}" value="{{ i.num }}" size="1" class="num input" />
+                </td>
+                <td>
+                    <span id="st{{ i.mark }}">{{ i.total|floatformat:2 }}</span>
+                </td>
+                <td align="right"><a href="{% url 'cart:delInCart' i.mark %}" class="btn btnbr">删除</a>
+                </td>
+            </tr>
+            {% endfor %}
+            <tr class="bline">
+                <td align="right" colspan="5"><b class="font15">商品总价: ￥<span class="total">{{ cart.total|floatformat:2 }}</span> 元</b>
+                </td>
+                <td></td>
+            </tr>
+            {% else %}
+            <tr class="bline">
+                <td align="center" colspan="6">您的购物车是空的</td>
+            </tr>
+            {% endif %}
+            <tr>
+                <td colspan="4">
+                    <a href="{% url 'tag:randomShow' %}" class="btn btnbr">继续购物</a>
+                </td>
+                <td align="right" colspan="2">
+                    <a href="{% url 'cart:cnsgn' %}" class="btn btnbr">结算</a>
+                </td>
+            </tr>
+        </table>
+        <table width="100%" class="mtb2">
+            <tr>
+                <td>是否购买生日套装（生日牌/蜡烛）？</td>
+                <td>3元/套</td>
+                <td align="right"><a href="{% url 'cart:buy' 115 %}" class="btn btnbr">是的，我需要购买生日套装</a>
+                </td>
+            </tr>
+            <tr>
+                <td>是否购买餐具？</td>
+                <td>1元/套</td>
+                <td align="right"><a href="{% url 'cart:buy' 116 %}" class="btn btnbr">是的，我需要购买餐具</a>
+                </td>
+            </tr>
+        </table>
+    </form>
 
-{% block section %}
-<form name="toCart" method="post" action="{% url 'cart:cart' %}">
+    <p>蛋糕规格及免费配送餐具：</p>
     <table width="100%">
         <tr>
-            <th>商品名称</th>
-            <th width="20%">规格</th>
-            <th width="10%">价格</th>
-            <th width="53px">数量</th>
-            <th width="10%">小计</th>
-            <th width="84px">&nbsp;</th>
+            <th>规格</th>
+            <th>适用人数(人)</th>
+            <th>免费赠送(套)</th>
         </tr>
-{% if cart.items %}
-{% for i in cart.items %}
         <tr align="center">
-            <td><a href="{% url 'tag:tagShow' i.item.name|urlencode %}">{{ i.item.name }}</a></td>
-            <td>{{ i.spec.spec.value }}</td>
-            <td><span id="am{{ i.mark }}">{{ i.nfee|floatformat:2 }}</span></td>
-            <td>
-                <input type="text" name="{{ i.mark }}" value="{{ i.num }}" size="1" class="num input" />
-            </td>
-            <td><span id="st{{ i.mark }}">{{ i.total|floatformat:2 }}</span></td>
-            <td align="right"><a href="{% url 'cart:delInCart' i.mark %}" class="btn btnbr">删除</a></td>
+            <td>1.0磅</td>
+            <td>2-3</td>
+            <td>3</td>
         </tr>
-{% endfor %}
-        <tr class="bline">
-            <td align="right" colspan="5"><b class="font15">商品总价: ￥<span class="total">{{ cart.total|floatformat:2 }}</span> 元</b></td>
-            <td></td>
+        <tr align="center">
+            <td>1.5磅</td>
+            <td>5-6</td>
+            <td>6</td>
         </tr>
-{% else %}
-        <tr class="bline">
-            <td align="center" colspan="6">您的购物车是空的</td>
+        <tr align="center">
+            <td>2.5磅</td>
+            <td>8-9人</td>
+            <td>10</td>
         </tr>
-{% endif %}
-        <tr>
-            <td colspan="4">
-                <a href="{% url 'tag:randomShow' %}" class="btn btnbr">继续购物</a>
-            </td>
-            <td align="right" colspan="2">
-                <a href="{% url 'cart:cnsgn' %}" class="btn btnbr">结算</a>
-            </td>
+        <tr align="center">
+            <td>3.5磅</td>
+            <td>12-13</td>
+            <td>15</td>
         </tr>
-    </table>
-    <table width="100%" class="mtb2">
-        <tr>
-            <td>是否购买生日套装（生日牌/蜡烛）？</td>
-            <td>3元/套</td>
-            <td align="right"><a href="{% url 'cart:buy' 115 %}" class="btn btnbr">是的，我需要购买生日套装</a></td>
+        <tr align="center">
+            <td>5.5磅</td>
+            <td>18-22</td>
+            <td>25</td>
         </tr>
-        <tr>
-            <td>是否购买餐具？</td>
-            <td>1元/套</td>
-            <td align="right"><a href="{% url 'cart:buy' 116 %}" class="btn btnbr">是的，我需要购买餐具</a></td>
+        <tr align="center">
+            <td>10.0磅</td>
+            <td>35-40</td>
+            <td>40</td>
         </tr>
     </table>
-</form>
-
-<p>蛋糕规格及免费配送餐具：</p>
-<table width="100%">
-    <tr>
-        <th>规格</th>
-        <th>适用人数(人)</th>
-        <th>免费赠送(套)</th>
-    </tr>
-    <tr align="center">
-        <td>1.0磅</td>
-        <td>2-3</td>
-        <td>3</td>
-    </tr>
-    <tr align="center">
-        <td>1.5磅</td>
-        <td>5-6</td>
-        <td>6</td>
-    </tr>
-    <tr align="center">
-        <td>2.5磅</td>
-        <td>8-9人</td>
-        <td>10</td>
-    </tr>
-    <tr align="center">
-        <td>3.5磅</td>
-        <td>12-13</td>
-        <td>15</td>
-    </tr>
-    <tr align="center">
-        <td>5.5磅</td>
-        <td>18-22</td>
-        <td>25</td>
-    </tr>
-    <tr align="center">
-        <td>10.0磅</td>
-        <td>35-40</td>
-        <td>40</td>
-    </tr>
-</table>
-<p>订购10磅(含)以上规格的蛋糕请与客服人员联系，订购电话：4000-5927-31</p>
-{% endblock %}
-
-
-{% block js %}
-        <script type="text/javascript" src="{{ STATIC_URL }}cart/js/cart.configuration.js"></script>
+    <p>订购10磅(含)以上规格的蛋糕请与客服人员联系，订购电话：4000-5927-31</p>
+</section>
+{% endblock %} {% block js %}
+<script type="text/javascript" src="{{ STATIC_URL }}cart/js/cart.configuration.js"></script>
 {% endblock %}
