修正库存格式化bug

--- a/inventory/templates/inventoryui.htm
+++ b/inventory/templates/inventoryui.htm
@@ -54,7 +54,7 @@
 {% endfor %}
 
           <tr>
-            <td align="center"><a href="{% url 'inventory:defaultInv' form.initial.s %}" class="button">备货格式化</a></td>
+            <td align="center"><a href="{% url 'inventory:defaultInv' form.initial.s %}" class="button" id="default">备货格式化</a></td>
             <td colspan="5">&nbsp;</td>
           </tr>
       </table>
